tests/testWorkflows/invalid_workflows/invalidInputWorkflow.playbook
{
    "name": "invalidInputWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "branches": [
                {
                    "conditions": [
                        {
                            "action_name": "regMatch",
                            "app_name": "HelloWorldBounded",
                            "arguments": [
                                {
                                    "name": "regex",
                                    "value": "(.*)"
                                }
                            ],
                            "transforms": [
                                {
                                    "action_name": "length",
                                    "app_name": "HelloWorldBounded",
                                    "arguments": []
                                }
                            ]
                        }
                    ],
                    "destination_id": -2,
                    "source_id": -1,
                    "status": "Success"
                }
            ],
            "start": -1,
            "actions": [
                {
                    "action_name": "returnPlusOne",
                    "app_name": "HelloWorldBounded",
                    "arguments": [
                        {
                            "name": "number",
                            "value": "abc"
                        }
                    ],
                    "name": "2",
                    "id": -2,
                    "device_id": 1
                },
                {
                    "action_name": "helloWorld",
                    "app_name": "Invalid",
                    "arguments": [],
                    "name": "start",
                    "id": -1,
                    "device_id": 1
                }
            ]
        }
    ]
}